--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxt generate && gh-pages -d .output/public"
   },
   "dependencies": {
     "@nuxtjs/i18n": "^8.5.5",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "daisyui": "^4.12.10",
+    "gh-pages": "^6.3.0",
     "sass": "^1.80.6"
   }
 }
